Fixed spacing between custom data on mobile view

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -9,6 +9,14 @@ body {
 	margin-bottom: 5px;
 }
 
+.padded-column {
+	padding-top:10px; 
+	padding-bottom:10px; 
+}
+
+.padded-row {
+	padding-bottom:20px; 
+}
 /*For navbar */
 nav {
 	background-color: #E4E4E4 !important;
